# routes/index.js
@@ -5,4 +5,11 @@ router.use('/projects', require('./projects'));
 router.use('/users', require('./users'));
 router.use('/tasks', require('./tasks'));
 
+router.post('/logout', function(req, res, next) {
+    req.logout(function(err) {
+      if (err) { return next(err); }
+      res.redirect('/');
+    });
+});
+
 module.exports = router;
